--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "dev": "nodemon app.js"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "connect-mongo": "^3.2.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
