--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "brace": "^0.11.1",
+    "is-hotkey": "^0.1.6",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-ace": "^9.0.0",
     "react-dom": "^16.13.1",
