--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "brace": "^0.11.1",
+    "classnames": "^2.2.6",
     "is-hotkey": "^0.1.6",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
