--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "scripts": {
         "dev": "nodemon app.js",
-        "heroku-postbuild": "YARN_PRODUCTION=false yarn install --cwd/frontend/ && yarn --cwd ~/frontend/ run build"
+        "heroku-postbuild": "YARN_PRODUCTION=false yarn install --cwd ~/frontend/ && yarn --cwd ~/frontend/ run build"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
